--- a/MultiplayerBeta1000BUMBUM/Multiplayer/Multiplayer.vcxproj.filters
+++ b/MultiplayerBeta1000BUMBUM/Multiplayer/Multiplayer.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="CollidableObjectManager.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="S_CollisionManager.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameApplicationLayer.cpp">
@@ -81,6 +84,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Gamer.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="CollisionManager.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
